--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
             "com\\nlf\\calendar\\": "src/"
         }
     },
-    "homepage": "https://github.com/6tail/lunar-php",
+    "homepage": "https://github.com/6taicompl/lunar-php",
     "keywords": [
         "calendar",
         "lunar",
